# GRenderer

./: .gitignore  .gitmodules  Bounds2.h  Bounds3.h  CMakeLists.txt  Doxyfile  Math.h  MathUtil.h  Normal3.h  Point2.h  Point3.h  Ray.h  Tuple2.h  Tuple2.inl  Tuple3.h  Vector2.h  Vector3.h  main.cpp
test/: BoundsTest.cpp  CMakeLists.txt  MathUtilTest.cpp  NormalTest.cpp  PointTest.cpp  RayTest.cpp  VecTest.cpp
